Fixed another scrollbar. Fixed error with react modal setAppElement

--- a/src/RPGTools/DialogueTreeMaker/DialogueMaker/HiddenInfo/update-hidden-info-modal.css
+++ b/src/RPGTools/DialogueTreeMaker/DialogueMaker/HiddenInfo/update-hidden-info-modal.css
@@ -10,4 +10,9 @@
 
     overflow-y: scroll;
     overflow-x: hidden;
+    scrollbar-width: none;
+}
+
+.choices-list__container::-webkit-scrollbar {
+    display: none;
 }
